fix scrollbar

--- a/src/scss/block/hamburgerMenu.scss
+++ b/src/scss/block/hamburgerMenu.scss
@@ -51,7 +51,7 @@
 			gap: 5px;
 			width: 100%;
 
-			button {
+			.button {
 				width: 100%;
 				padding: 11.5px 20px;
 			}
