--- a/src/scss/block/main.scss
+++ b/src/scss/block/main.scss
@@ -4,7 +4,7 @@
 	overflow: hidden;
 	position: relative;
 	min-height: calc(100vh - 260px);
-	@media (max-width: 1550px) {
+	@media (max-width: 1665px) {
 		padding-top: 70px;
 		padding-bottom: 120px;
 	}
@@ -15,10 +15,11 @@
 		transform: translate(-53%, 0);
 		display: flex;
 		flex-direction: column;
-		overflow: hidden;
-		user-select: none;
 		gap: 32px;
-		@media (max-width: 1550px) {
+		@media (max-width: 1691px) {
+			left: 54%;
+		}
+		@media (max-width: 1665px) {
 			max-height: 165px;
 			display: none;
 		}
@@ -34,7 +35,7 @@
 				margin-right: 16px;
 				width: 100px;
 				animation: scrollDown 15s linear infinite;
-				@media (max-width: 1550px) {
+				@media (max-width: 1665px) {
 					max-height: 165px;
 				}
 
@@ -52,24 +53,38 @@
 	.anim-mobile {
 		flex-direction: row;
 		position: absolute;
-		width: 100%;
+		width: 2400px;
 		display: none;
+		user-select: none;
 		right: 50%;
 		bottom: 50%;
-		gap: 32px;
+		gap: 16px;
 		transform: translate(50%, -50%);
-		@media (max-width: 1550px) {
+		@media (max-width: 1665px) {
 			display: flex;
+		}
+		@media (max-width: 608px) {
+			max-width: none;
+		}
+		@media (max-width: 597px) {
+			transform: translate(50%, -58%);
+		}
+		@media (max-width: 537px) {
+			transform: translate(50%, -45%);
+		}
+		@media (max-width: 387px) {
+			transform: translate(50%, -36%);
 		}
 
 		.chips {
 			display: flex;
 			flex-wrap: wrap;
 			width: 100%;
+			gap: 8px;
 
 			img {
 				max-height: none;
-				width: 640px;
+				width: 580px;
 				height: 49px;
 				animation: scrollRight 15s linear infinite;
 
@@ -84,24 +99,19 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		@media (max-width: 1550px) {
+		@media (max-width: 1665px) {
 			flex-direction: column;
 			align-items: center;
 		}
 	}
 
 	&__left {
-		margin-top: 156px;
 		max-width: 669px;
 		width: 100%;
 		position: relative;
-		@media (max-width: 1550px) {
+		@media (max-width: 1665px) {
 			text-align: center;
 			margin-bottom: 230px;
-			margin-top: 0;
-		}
-		@media (max-height: 950px) {
-			margin-top: 0;
 		}
 		//
 		//&:before {
@@ -154,13 +164,14 @@
 		font-weight: 600;
 		line-height: 32px;
 
-		@media (max-width: 1550px) {
+		@media (max-width: 1665px) {
 			margin: 48px auto 0 auto;
 		}
 		@media (max-width: 596px) {
 			width: 80%;
 			padding: 15px 20px;
 			font-size: 18px;
+			margin-top: 24px;
 		}
 		@media (max-width: 387px) {
 			width: 100%;
@@ -189,28 +200,40 @@
 			}
 		}
 
+		.scroll {
+			max-width: 467px;
+			width: 100%;
+			display: flex;
+			flex-direction: column;
+			gap: 16px;
+			padding-right: 12px;
+			@media (max-width: 596px) {
+				gap: 8px;
+				padding-right: 22px;
+				max-width: none;
+			}
+		}
+
 		&-area {
 			border-radius: 100px;
 			border: 3px solid $blue;
 			background: $dark_gray;
-			padding: 24px 40px 0 24px;
+			padding: 24px 0 0 24px;
 			display: flex;
 			flex-direction: column;
-			gap: 16px;
-			max-height: 595px;
-			height: 100%;
-			overflow: scroll;
+			height: 595px;
+			overflow: hidden;
 			@media (max-width: 596px) {
 				border: 2px solid $blue;
-				padding: 10px 15px 0 9px;
-				max-height: 431px;
+				padding: 10px 0 0 9px;
+				height: 431px;
 				border-radius: 50px;
 			}
-			@media (min-width: 1550px) and (max-height: 1040px) {
-				max-height: 400px;
+			@media (min-width: 1665px) and (max-height: 1040px) {
+				height: 400px;
 			}
-			@media (min-width: 1550px) and (max-height: 800px) {
-				max-height: 300px;
+			@media (min-width: 1665px) and (max-height: 800px) {
+				height: 300px;
 			}
 
 			&__card {
@@ -219,6 +242,14 @@
 				border-radius: 100px;
 				display: flex;
 				flex-direction: column;
+
+				&:last-of-type {
+					margin-bottom: 24px;
+					@media (max-width: 596px) {
+						margin-bottom: 10px;
+					}
+				}
+
 				@media (max-width: 596px) {
 					padding: 15px 35px;
 					border-radius: 40px;
@@ -244,17 +275,18 @@
 					font-weight: 500;
 					font-size: 14px;
 					line-height: 16px;
+					color: $gray;
 				}
 			}
 		}
 
 		@keyframes scrollDown {
 			0% {
-				transform: translateY(-100%);
+				transform: translateY(calc(-100% - 32px));
 			}
 
 			100% {
-				transform: translateY(32px);
+				transform: translateY(0);
 			}
 		}
 
@@ -270,7 +302,7 @@
 
 		@keyframes scrollRight {
 			0% {
-				transform: translateX(calc(-100% - 32px));
+				transform: translateX(calc(-100% - 24px));
 			}
 
 			100% {
@@ -284,7 +316,7 @@
 			}
 
 			100% {
-				transform: translateX(calc(-100% - 32px));
+				transform: translateX(calc(-100% - 24px));
 			}
 		}
 	}
